; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/tms320/c55x_plus/extr_decode_funcs.c_get_reg_pair.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/tms320/c55x_plus/extr_decode_funcs.c_get_reg_pair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"ac0, ac2\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"ac1, ac3\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"pair(ac0), pair(ac2)\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"ar0, ar1\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"ar0, ar2\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"ar1, ar3\00", align 1
@.str.6 = private unnamed_addr constant [21 x i8] c"pair(ar0), pair(ar2)\00", align 1
@.str.7 = private unnamed_addr constant [7 x i8] c"t0, t2\00", align 1
@.str.8 = private unnamed_addr constant [7 x i8] c"t1, t3\00", align 1
@.str.9 = private unnamed_addr constant [19 x i8] c"pair(t0), pair(t2)\00", align 1
@.str.10 = private unnamed_addr constant [8 x i8] c"ar4, t0\00", align 1
@.str.11 = private unnamed_addr constant [8 x i8] c"ar5, t1\00", align 1
@.str.12 = private unnamed_addr constant [20 x i8] c"pair(ar4), pair(t0)\00", align 1
@.str.13 = private unnamed_addr constant [8 x i8] c"ar6, t2\00", align 1
@.str.14 = private unnamed_addr constant [8 x i8] c"ar7, t3\00", align 1
@.str.15 = private unnamed_addr constant [20 x i8] c"pair(ar6), pair(t2)\00", align 1
@.str.16 = private unnamed_addr constant [22 x i8] c"block(ar4), block(t0)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_reg_pair(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i8* null, i8** %3, align 8
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %22 [
    i32 1, label %5
    i32 2, label %6
    i32 3, label %7
    i32 4, label %8
    i32 5, label %9
    i32 6, label %10
    i32 7, label %11
    i32 9, label %12
    i32 10, label %13
    i32 11, label %14
    i32 21, label %15
    i32 22, label %16
    i32 23, label %17
    i32 25, label %18
    i32 26, label %19
    i32 27, label %20
    i32 31, label %21
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %23

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %23

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  br label %23

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %23

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0), i8** %3, align 8
  br label %23

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i8** %3, align 8
  br label %23

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.6, i64 0, i64 0), i8** %3, align 8
  br label %23

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.7, i64 0, i64 0), i8** %3, align 8
  br label %23

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.8, i64 0, i64 0), i8** %3, align 8
  br label %23

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.9, i64 0, i64 0), i8** %3, align 8
  br label %23

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.10, i64 0, i64 0), i8** %3, align 8
  br label %23

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.11, i64 0, i64 0), i8** %3, align 8
  br label %23

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.12, i64 0, i64 0), i8** %3, align 8
  br label %23

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.13, i64 0, i64 0), i8** %3, align 8
  br label %23

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.14, i64 0, i64 0), i8** %3, align 8
  br label %23

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.15, i64 0, i64 0), i8** %3, align 8
  br label %23

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.16, i64 0, i64 0), i8** %3, align 8
  br label %23

22:                                               ; preds = %1
  store i8* null, i8** %3, align 8
  br label %23

23:                                               ; preds = %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %24 = load i8*, i8** %3, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %26, label %29

26:                                               ; preds = %23
  %27 = load i8*, i8** %3, align 8
  %28 = call i8* @strdup(i8* %27)
  store i8* %28, i8** %3, align 8
  br label %29

29:                                               ; preds = %26, %23
  %30 = load i8*, i8** %3, align 8
  ret i8* %30
}

declare dso_local i8* @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
